[build-system]
requires = ["setuptools","wheels"]
build-backend = "setuptools.build_meta"

[project]
name = "cozyaccommodation-pokugara"
version = "0.1.0"
description = "Bringing the meeting place for accommodation seekers and suppliers convenienly in your own home or office!"
authors = [{name = "Cozymore Ngaribvume", email = cngaribvume@gmail.com"}]
license = "GPL-3.0-or-later"
dependemcies = ["pandas>=1.4.0,<3","psycopg2==2.9.11","psycopg2_binary==2.9.11","streamlit==1.55.0","toml==0.10.2"]
	
	
